<resources>
    <string name="app_name">Western Game Center</string>
    <string name="title_activity_user">Active Users</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_testing">Testing</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_optional">Phone(Optional)</string>
    <string name="start">start</string>
    <string name="active_user">Active User</string>
    <string name="cancel">Cancel</string>
    <string name="done">DONE</string>
</resources>
