<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.western.game.center.westerngamecenter.Fragments.User_Activities.Add_New_User.Add_new_User.Add_user_dialog">




    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/western_logo"
                    app:civ_border_width="3dp"
                    app:civ_border_overlay="true"
                    app:civ_border_color="#FF000000"/>


            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="@dimen/cardview_default_elevation">

    <FrameLayout
        android:background="@drawable/cardview_border_yellow"
        android:id="@+id/fram_name"
        android:layout_width="4dp"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="left">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_face_black_30dp"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/edit_First_name"
            android:hint="@string/first_name"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="center"
            android:maxLines="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <FrameLayout
            android:background="@drawable/cardview_border_red"
            android:layout_width="4dp"
            android:id="@+id/fram_lastname"
            android:layout_height="match_parent"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="left">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_black_30dp"
                android:layout_gravity="center"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:id="@+id/edit_Last_name"
                android:hint="@string/last_name"
                android:backgroundTint="@android:color/transparent"
                android:layout_gravity="center"
                android:maxLines="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <FrameLayout
            android:background="@drawable/cardview_border_red"
            android:layout_width="4dp"
            android:id="@+id/fram_phone"
            android:layout_height="match_parent"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="left">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_black_30dp"
                android:layout_gravity="center"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:id="@+id/edit_phone"
                android:hint="@string/phone_optional"
                android:maxLength="11"
                android:maxLines="1"
                android:backgroundTint="@android:color/transparent"
                android:inputType="number"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">



        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_add_new_user"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_new_user"
            style="@style/Widget.MaterialComponents.Button"/>


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>
